# jugger_strategy_tool

./: Cargo.toml  README.md  index.html  package.json  serve.sh  tailwind.config.js
bevy/: Cargo.toml
bevy/src/: main.rs  plugins.rs
bevy/wasm-bindgen-out/: jugger_strategy_tool.js
public/: styles.scss
src/: leptos_app.rs  lib.rs  main.rs
src/bevy/: arrow.rs  camera.rs  field.rs  input.rs  mod.rs  unit.rs
src/components/: counter_btn.rs  dev_error_view.rs  mod.rs
src/pages/: desktop.rs  mobile.rs  mod.rs
