[package]
name = "bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
	"bevy_asset",
	"bevy_color",
	"bevy_core_pipeline",
	"bevy_picking",
	"bevy_render",
	"bevy_sprite",
	"bevy_sprite_picking_backend",
	"bevy_state",
	"bevy_text",
	"bevy_ui",
	"bevy_ui_picking_backend",
	"bevy_window",
	"default_font",
	"hdr",
	"png",
	"webgl2",
	"serialize",
] }
